<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="hint_loading">正在加载中…</string>
    <string name="no_pick">未指定</string>
    <string name="empty">未指定</string>
    <string name="title_activity_message_list">消息</string>
    <string name="app_name">现金急速贷</string>
    <string name="action_settings">设置</string>
    <string name="app_descption">医路同行，医路帮</string>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_no_data">没有更多数据</string>
    <string name="treat_news_proviews">上一篇</string>
    <string name="treat_news_next">下一篇</string>
    <string name="edit_comment">我来说几句</string>
    <string name="comment_publish">发送</string>
    <string name="title_activity_news_detial">NewsDetialActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="register">注册</string>
    <string name="login_12">登陆</string>
    <string name="mine_identify">资料认证</string>
    <string name="mine_message">消息</string>
    <string name="mine_order">订单上报</string>
    <string name="mine_sign">签到</string>
    <string name="mine_password_change">密码修改</string>
    <string name="mine_opinion">意见反馈</string>
    <string name="mine_invitor">邀请人</string>
    <string name="mine_loginout">退出</string>
    <string name="mine_provice">省市区</string>
    <string name="mine_sfzh">填写身份证号</string>
    <string name="mine_zsxm">填写真实姓名</string>
    <string name="mine_zgzh">填写村医资格证号</string>
    <string name="mine_zsqc">填写诊所全称</string>
    <string name="mine_zsxxdz">填写诊所详细地址</string>
    <string name="mine_tjhm">填写推荐人的手机号码</string>
    <string name="mine_cyzgzzp">上传村医资格证照片</string>
    <string name="mine_tjrz">提交认证</string>
    <string name="exchange_jifen">我的积分</string>
    <string name="exchange_jfcj">积分抽奖</string>
    <string name="connect_service_fail">连接服务器失败，请检查网络或稍后重试</string>
    <string name="scan_text">将药品监管码放入框内，可以自动扫描</string>
    <string name="title_activity_data_identification">DataIdentificationActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_wait_data_identification">WaitDataIdentificationActivity</string>
    <string name="title_activity_order_appear">OrderAppearActivity</string>
    <string name="title_activity_drug_appear">DrugAppearActivity</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_detial_drug">DetialDrugActivity</string>
    <string name="title_activity_scanner_order">ScannerOrderActivity</string>
    <string name="title_activity_detial_award">DetialAwardActivity</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_option_publish">OptionPublishActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_token_lose">TokenLoseActivity</string>
    <string name="title_activity_forget_password1">ForgetPassword1Activity</string>
    <string name="title_activity_counts">CountsActivity</string>
    <string name="surefirm">保险公司</string>
    <string name="carList">车辆列表</string>
    <string name="update_nickname_hit">Please Fill Your Nickname</string>
    <string name="update_username_hit">Please Fill Your Username</string>
    <string name="login_phone_hit">Please Fill Your Mobile Number</string>
    <string name="receiver_name">Name of Consignee</string>
    <string name="phone_num">Please Fill Your Mobile Number</string>
    <string name="province_city">Please select the provincial city</string>
    <string name="detail_addr">Please Fill Detail Address</string>
    <string name="post_code">Please Fill Postcode</string>
    <string name="login_password_hit">Please Fill 6-20 Char Pass</string>
    <string name="login_code_hit">Please Fill Your Code</string>
    <string name="login_pass_hit">Please Fill New Pass</string>
    <string name="login_pass_hit1">Please Fill New Pass Again</string>
    <string name="login">Login</string>
    <string name="forgetpass"><u>Forgot Password</u></string>
    <string name="modifypassword">Update Pass</string>
    <string name="next_step">Next</string>
    <string name="confirm_and_update">Confirm to Add</string>
    <string name="add">Add</string>
    <string name="loading">Loading...</string>
    <string name="reg_prompt">No Account Number?</string>
    <string name="now_register"><u>Register Immediately</u></string>
    <string name="send_code">Send Code</string>
    <string name="code_s">S</string>
    <string name="code_already_send">Verification code has been sent</string>
    <string name="per_nologin_text">Click This To Login</string>
    <string name="per_mydesign">Designs</string>
    <string name="per_myorder">Orders</string>
    <string name="per_cart">Cart</string>
    <string name="per_receiveAddr">Address</string>
    <string name="per_add_receiveAddr">Add Receiver Address</string>
    <string name="per_mymessage">Message</string>
    <string name="per_setting">Setting</string>
    <string name="order_detail">Detail Order Info</string>
    <string name="cart_calculate">Calculate</string>
    <string name="send_method">Shipping Method</string>
    <string name="coupon">Coupon</string>
    <string name="set_accountSafe">Security</string>
    <string name="set_clear">Clear</string>
    <string name="set_help">Help</string>
    <string name="set_share">Share</string>
    <string name="set_suggest">Feedback</string>
    <string name="set_about">About Us</string>
    <string name="set_call">Contact</string>
    <string name="update_phone">Update Phone Number</string>
    <string name="update_email">Update Email</string>
    <string name="update_weixin">Update Weixin</string>
    <string name="update_password">Update Pass</string>
    <string name="modify_phone">Please Enter You Need Binding New Phone Number"</string>
    <string name="modify_email">Please Enter You Need To Bind Mailbox</string>
    <string name="modify_weixin">Please Enter Your Need WeChat ID Binding</string>
    <string name="modify_pass">Password From 6 To 20 English Letters, Numbers, or Symbols</string>
    <string name="fill_message_code">Please enter the received SMS verification code</string>
    <string name="message_code">Message Check Code</string>
    <string name="verify_code">Verify</string>
    <string name="new_pass">新密码</string>
    <string name="fill_old_pass">请输入原密码</string>
    <string name="fill_new_pass">请输入新密码</string>
    <string name="fill_new_pass_again">请再次输入新密码</string>
    <string name="fill_email">请输入邮箱地址</string>
    <string name="fill_weixin">输入微信号</string>
    <string name="please_fill_weixin">请输入微信号</string>
    <string name="email">Fill Email</string>
    <string name="modify_city">Country And Field</string>
    <string name="modify_newPhone">New phone</string>
    <string name="design_edit">Edit</string>
    <string name="design_delete">Delete</string>
    <string name="design_add_cart">Add To Cart</string>
    <string name="person_male">Male</string>
    <string name="female">Female</string>
    <string name="user_nickname">Nickname</string>
    <string name="user_avatar">Avatar</string>
    <string name="user_truename">Real Name</string>
    <string name="user_gender">Gender</string>
    <string name="user_birth">Birthday</string>
    <string name="user_info">Personal Information</string>
    <string name="no_set">Not Set</string>
    <string name="change_head">Replace Head</string>
    <string name="change_nickname">Modified Nickname</string>
    <string name="modify">Modify</string>
    <string name="update_truename">Modify Real Name</string>
    <string name="birth_prompt">Please Select The Date Before The Current Date</string>
    <string name="nickname_prompt">Please Fill In The Nickname</string>
    <string name="truename_prompt">Please Fill In The Real Name</string>
    <string name="confirm_delete">Confirm To Delete?</string>
    <string name="confirm_delete_order">Confirm To Delete?</string>
    <string name="confirm_cancel_order">Confirm cancel the order?</string>
    <string name="warning">Warning</string>
    <string name="cart_prompt">Finished Design Are Saved In MY DESIGNS</string>
    <string name="cart_all">All</string>
    <string name="cart_total_price">Total</string>
    <string name="cart_no_freight">Excl Delivery</string>
    <string name="cart_to_calculate">CHECKOUT</string>
    <string name="send_cost">Shipping Cost</string>
    <string name="use_coupon">Use Coupon</string>
    <string name="please_select">Select</string>
    <string name="free_freight">Free Shipping</string>
    <string name="youhui">Preferential $0.00</string>
    <string name="need_pay">Need To Pay $0.00</string>
    <string name="need_to_pay">Need To Pay</string>
    <string name="pay_now">Pay Now</string>
    <string name="address_prompt">Please Select An Address</string>
    <string name="default_price">$0.00</string>
    <string name="calculate_price">￥0.00(Free Shipping)</string>
    <string name="order_nopay">Unpaid</string>
    <string name="order_num">Order Num:</string>
    <string name="cancel_order">Cancel</string>
    <string name="pay_order">Checkout</string>
    <string name="delete_order">Delete</string>
</resources>