<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_orderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_num"
                android:textSize="16sp"
                android:textColor="@color/common_detail_color"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/tv_orderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:text="20160101010101010"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/lbl_orderNo"/>

            <TextView
                android:id="@+id/tv_order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:layout_marginRight="15dp"
                android:text="@string/order_nopay"
                android:textColor="@color/common_btn_bg"/>
        </RelativeLayout>

        <com.ahxbapp.xjjsd.customview.NoScrollListView
            android:id="@+id/orderDetail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:background="@color/order_detail_bg"
            android:focusable="false"
            android:listSelector="@drawable/list_click_clear">
        </com.ahxbapp.xjjsd.customview.NoScrollListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_price"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/common_detail_color"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/tv_youhui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youhui"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/common_btn_bg"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_pay"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/common_title_color"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/tv_total_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_to_pay"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/common_detail_color"
                android:layout_gravity="right"/>
        </LinearLayout>

        <include layout="@layout/divide_1"/>
        <RelativeLayout
            android:id="@+id/layout_nopay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <!--待支付-->
            <Button
                android:id="@+id/btn_pay"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg_red_white_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/pay_order"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg_white_gray_bounds"
                android:text="@string/cancel_order"
                android:textColor="@color/common_title_color"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/btn_pay"/>

        </RelativeLayout>

        <include layout="@layout/divide_1"/>
        <RelativeLayout
            android:id="@+id/layout_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <!--生产中-->
            <Button
                android:id="@+id/btn_receive"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg_red_white_text"
                android:textSize="15sp"
                android:text="确认收货"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <include layout="@layout/divide_1"/>
        <RelativeLayout
            android:id="@+id/layout_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <!--已完成-->
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg_white_gray_bounds"
                android:textColor="@color/common_title_color"
                android:textSize="15sp"
                android:text="@string/delete_order"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>