<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/common_nav_bg" >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/cart_prompt"
            android:background="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/common_btn_bg">
        </TextView>

        <ListView
        android:id="@+id/mylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="10dp"
        android:background="@color/white">

        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <include layout="@layout/divide_1"/>
        <CheckBox
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:textColor="@color/common_title_color"
            android:text="@string/cart_all"
            android:button="@drawable/check_state"
            android:layout_centerVertical="true"
            android:background="@color/clear_color"/>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/common_btn_bg"
            android:layout_alignParentRight="true"
            android:text="@string/cart_to_calculate"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btn_calculate"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/cart_total_price"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/common_btn_bg"
                    android:text="￥0.0"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cart_no_freight"/>

        </LinearLayout>


    </RelativeLayout>

    <include
        android:id="@+id/blankLayout"
        layout="@layout/view_exception"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>