<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/common_nav_bg" >

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/rootScrollView"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/common_back_color">

            <LinearLayout
                android:id="@+id/layout_address"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textSize="16sp"
                        android:text=""/>

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginRight="15dp"
                        android:text=""
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="16sp"
                        android:text="" />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_noaddress"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:drawablePadding="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_prompt"
                        android:drawableLeft="@mipmap/icon_adress"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/layout_send_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_method"
                        android:textSize="16sp"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/tv_send_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/please_select"
                        android:drawableRight="@mipmap/ic_list_right_arr"
                        android:textSize="16sp"/>

                </RelativeLayout>
                <include layout="@layout/divide_1"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_cost"
                        android:textSize="16sp"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/tv_send_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:text="@string/free_freight"
                        android:textSize="16sp"/>
                </RelativeLayout>
                <include layout="@layout/divide_1"/>
                <RelativeLayout
                    android:id="@+id/layout_coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_coupon"
                        android:textSize="16sp"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/tv_coupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:drawableRight="@mipmap/ic_list_right_arr"
                        android:text="@string/please_select"
                        android:textSize="16sp"/>
                </RelativeLayout>



            </LinearLayout>

            <com.ahxbapp.xjjsd.customview.NoScrollListView
                android:id="@+id/calculate_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="1dp"
                android:background="@color/white"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:listSelector="@drawable/list_click_clear">
            </com.ahxbapp.xjjsd.customview.NoScrollListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_price"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/common_detail_color"
                    android:layout_gravity="right"/>

                <TextView
                    android:id="@+id/tv_youhui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youhui"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/common_btn_bg"
                    android:layout_gravity="right"/>

                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_pay"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/common_title_color"
                    android:layout_gravity="right"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <include layout="@layout/divide_1"/>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/common_btn_bg"
            android:layout_alignParentRight="true"
            android:text="@string/pay_now"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btn_calculate"
            android:orientation="horizontal"
            android:paddingRight="10dp">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
            android:textSize="16sp"
                android:layout_marginRight="5dp"
            android:text="@string/need_to_pay" />

            <TextView
                android:id="@+id/tv_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/default_price"
                android:textColor="@color/common_btn_bg"/>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>